--- a/views/home/postone.ejs
+++ b/views/home/postone.ejs
@@ -9,32 +9,8 @@
 	    				<h1 class="mb-3"><%= post.title %></h1>
                         
 		            <p><%= post.explain %></p>
-		            <p>
-                                    <% if (post.category=='Projeler') { %>
-                                    <img src="images/projeler.jpeg" alt="" style="width:100%"  class="img-fluid">
-									<% } %>
-									<% if (post.category=='Teknoloji') { %>
-                                    
-                                    <img src="images/teknoloji.jpeg" alt="" style="width:100%" class="img-fluid">
-									<% } %>
-									<% if (post.category=='Seyahatler') { %>
-                                    
-                                    <img style="width:100%"  src="images/seyahatler.jpeg" alt="" class="img-fluid">
-									<% } %>
-									<% if (post.category=='Yemekler') { %>
-                                    
-                                    <img style="width:100%"  src="images/yemekler.jpeg" alt="" class="img-fluid">
-										<a href="single.html" class="img img-2" style="background-image: url(images/yemekler.jpeg);"></a>
-									<% } %>
-		            </p>
-		            <div class="tag-widget post-tag-container mb-5 mt-5">
-		              <div class="tagcloud">
-		                <a href="#" class="tag-cloud-link">Life</a>
-		                <a href="#" class="tag-cloud-link">Sport</a>
-		                <a href="#" class="tag-cloud-link">Tech</a>
-		                <a href="#" class="tag-cloud-link">Travel</a>
-		              </div>
-		            </div>
+		            
+		           
 		            
 		           
 
@@ -43,31 +19,25 @@
 		           
 		              <!-- END comment-list -->
 		              
-		              <div class="comment-form-wrap pt-5">
-		                <h3 class="mb-5">Leave a comment</h3>
-		                <form action="#" class="p-3 p-md-5 bg-light">
-		                  <div class="form-group">
-		                    <label for="name">Name *</label>
-		                    <input type="text" class="form-control" id="name">
-		                  </div>
-		                  <div class="form-group">
-		                    <label for="email">Email *</label>
-		                    <input type="email" class="form-control" id="email">
-		                  </div>
-		                  <div class="form-group">
-		                    <label for="website">Website</label>
-		                    <input type="url" class="form-control" id="website">
-		                  </div>
-
-		                  <div class="form-group">
-		                    <label for="message">Message</label>
-		                    <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
-		                  </div>
-		                  <div class="form-group">
-		                    <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
-		                  </div>
-
-		                </form>
+		              <div class="comment-form-wrap ">
+		                <h3 class="mb-5">Yorum Yap</h3>
+		                 <form action="#" class="bg-light p-5 contact-form">
+	              <div class="form-group">
+	                <input type="text" class="form-control" placeholder="Ad">
+	              </div>
+	              <div class="form-group">
+	                <input type="text" class="form-control" placeholder="Email">
+	              </div>
+	              <div class="form-group">
+	                <input type="text" class="form-control" placeholder="Başlık">
+	              </div>
+	              <div class="form-group">
+	                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Mesaj"></textarea>
+	              </div>
+	              <div class="form-group">
+	                <input type="submit" value="Gönder" class="btn btn-primary py-3 px-5">
+	              </div>
+	            </form>
 		              </div>
 		            </div>
 			    		</div><!-- END-->
